<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.10">
  <GVL Name="GVL_IO_STRUCTS" Id="{7740b386-6bb3-46c7-b916-4cc17bd74b7b}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
VAR_GLOBAL
	
	
	// STILL NEED ESTOP VERIFICATION, PSU VERIFICATION, DCDC VERIFICATION

	// SECTION ONE OCCURS WITH DOOR CLOSED AND ESTOP DEPRESSED AND NOTHING CONFIGURED
	IO_MAP_SECTION1_DIG : ARRAY[0..CONSTANTS.SECTION1_NUM_DIG_TESTS-1] OF IO_STRUCT := [
		(
			SECTION := 1,
			INDEX := 0,
			SCH_LBL := 'J7_4',
			SIGNAL := 'Digital',
			TESTER_PORT := 'J7',
			DESCRIPTION := '480V Supplied 7/8 S29 Up 24V Power Check', // This is written to HMI
			LIVE_BOOL := 0, // This is written to from the IO variable
			EXPECTED_BOOL := 1,
			RESULT := 'FAIL' // This is written from HMI
		),
		(
			SECTION := 1,
			INDEX := 1,
			SCH_LBL := 'J7_5',
			SIGNAL := 'Digital',
			TESTER_PORT := 'J7',
			DESCRIPTION := '480V Supplied 7/8 S29 Us 24V Power Check', // This is written to HMI
			LIVE_BOOL := 0, // This is written to from the IO variable
			EXPECTED_BOOL := 1,
			RESULT := 'FAIL' // This is written from HMI
		),
		(
			SECTION := 1,
			INDEX := 2,
			SCH_LBL := 'J8_4',
			SIGNAL := 'Digital',
			TESTER_PORT := 'J8',
			DESCRIPTION := '480V Supplied 7/8 S30 Up 24V Power Check', // This is written to HMI
			LIVE_BOOL := 0, // This is written to from the IO variable
			EXPECTED_BOOL := 1,
			RESULT := 'FAIL' // This is written from HMI
		),
		(
			SECTION := 1,
			INDEX := 3,
			SCH_LBL := 'J8_5',
			SIGNAL := 'Digital',
			TESTER_PORT := 'J8',
			DESCRIPTION := '480V Supplied 7/8 S30 Us 24V Power Check', // This is written to HMI
			LIVE_BOOL := 0, // This is written to from the IO variable
			EXPECTED_BOOL := 1,
			RESULT := 'FAIL' // This is written from HMI
		),
		(
			SECTION := 1,
			INDEX := 4,
			SCH_LBL := 'J1_1',
			SIGNAL := 'Digital',
			TESTER_PORT := 'J1',
			DESCRIPTION := '480V Supplied 24V Lighting Up S33', // This is written to HMI
			LIVE_BOOL := 0, // This is written to from the IO variable
			EXPECTED_BOOL := 1,
			RESULT := 'FAIL' // This is written from HMI
		),
		(
			SECTION := 1,
			INDEX := 5,
			SCH_LBL := 'J1_2',
			SIGNAL := 'Digital',
			TESTER_PORT := 'J1',
			DESCRIPTION := '480V Supplied 24V Lighting Up S33', // This is written to HMI
			LIVE_BOOL := 0, // This is written to from the IO variable
			EXPECTED_BOOL := 1,
			RESULT := 'FAIL' // This is written from HMI
		),
		(
			SECTION := 1,
			INDEX := 6,
			SCH_LBL := 'J2_1',
			SIGNAL := 'Digital',
			TESTER_PORT := 'J2',
			DESCRIPTION := '480V Supplied 24V Lighting Up S34', // This is written to HMI
			LIVE_BOOL := 0, // This is written to from the IO variable
			EXPECTED_BOOL := 1,
			RESULT := 'FAIL' // This is written from HMI
		),
		(
			SECTION := 1,
			INDEX := 7,
			SCH_LBL := 'J2_2',
			SIGNAL := 'Digital',
			TESTER_PORT := 'J2',
			DESCRIPTION := '480V Supplied 24V Lighting Us S34', // This is written to HMI
			LIVE_BOOL := 0, // This is written to from the IO variable
			EXPECTED_BOOL := 1,
			RESULT := 'FAIL' // This is written from HMI
		),
		(
			SECTION := 1,
			INDEX := 8,
			SCH_LBL := 'J3_1',
			SIGNAL := 'Digital',
			TESTER_PORT := 'J3',
			DESCRIPTION := '480V Supplied 24V Lighting Up S25', // This is written to HMI
			LIVE_BOOL := 0, // This is written to from the IO variable
			EXPECTED_BOOL := 1,
			RESULT := 'FAIL' // This is written from HMI
		),
		(
			SECTION := 1,
			INDEX := 9,
			SCH_LBL := 'J3_2',
			SIGNAL := 'Digital',
			TESTER_PORT := 'J3',
			DESCRIPTION := '480V Supplied 24V Lighting Us S25', // This is written to HMI
			LIVE_BOOL := 0, // This is written to from the IO variable
			EXPECTED_BOOL := 1,
			RESULT := 'FAIL' // This is written from HMI
		),
		(
			SECTION := 1,
			INDEX := 10,
			SCH_LBL := 'J4_1',
			SIGNAL := 'Digital',
			TESTER_PORT := 'J4',
			DESCRIPTION := '480V Supplied 24V Lighting Up S26', // This is written to HMI
			LIVE_BOOL := 0, // This is written to from the IO variable
			EXPECTED_BOOL := 1,
			RESULT := 'FAIL' // This is written from HMI
		),
		(
			SECTION := 1,
			INDEX := 11,
			SCH_LBL := 'J4_2',
			SIGNAL := 'Digital',
			TESTER_PORT := 'J4',
			DESCRIPTION := '480V Supplied 24V Lighting Us S26', // This is written to HMI
			LIVE_BOOL := 0, // This is written to from the IO variable
			EXPECTED_BOOL := 1,
			RESULT := 'FAIL' // This is written from HMI
		),
		(
			SECTION := 1,
			INDEX := 12,
			SCH_LBL := 'J5_1',
			SIGNAL := 'Digital',
			TESTER_PORT := 'J5',
			DESCRIPTION := '480V Supplied 24V Lighting Up S27', // This is written to HMI
			LIVE_BOOL := 0, // This is written to from the IO variable
			EXPECTED_BOOL := 1,
			RESULT := 'FAIL' // This is written from HMI
		),
		(
			SECTION := 1,
			INDEX := 13,
			SCH_LBL := 'J5_2',
			SIGNAL := 'Digital',
			TESTER_PORT := 'J5',
			DESCRIPTION := '480V Supplied 24V Lighting Us S27', // This is written to HMI
			LIVE_BOOL := 0, // This is written to from the IO variable
			EXPECTED_BOOL := 1,
			RESULT := 'FAIL' // This is written from HMI
		),
		(
			SECTION := 1,
			INDEX := 14,
			SCH_LBL := 'J6_1',
			SIGNAL := 'Digital',
			TESTER_PORT := 'J6',
			DESCRIPTION := '480V Supplied 24V Lighting Up S28', // This is written to HMI
			LIVE_BOOL := 0, // This is written to from the IO variable
			EXPECTED_BOOL := 1,
			RESULT := 'FAIL' // This is written from HMI
		),
		(
			SECTION := 1,
			INDEX := 15,
			SCH_LBL := 'J6_2',
			SIGNAL := 'Digital',
			TESTER_PORT := 'J6',
			DESCRIPTION := '480V Supplied 24V Lighting Us S28', // This is written to HMI
			LIVE_BOOL := 0, // This is written to from the IO variable
			EXPECTED_BOOL := 1,
			RESULT := 'FAIL' // This is written from HMI
		),
		(
			SECTION := 1,
			INDEX := 16,
			SCH_LBL := 'SF1',
			SIGNAL := 'Digital',
			TESTER_PORT := 'SF2',
			TARGET_PORT := 'S2',
			DESCRIPTION := 'Mine Phone Continuity SF1', // This is written to HMI
			LIVE_BOOL := 0, // This is written to from the IO variable
			EXPECTED_BOOL := 1,
			RESULT := 'FAIL' // This is written from HMI
		),
		(
			SECTION := 1,
			INDEX := 17,
			SCH_LBL := 'SF2',
			SIGNAL := 'Digital',
			TESTER_PORT := 'SF2',
			TARGET_PORT := 'S2',
			DESCRIPTION := 'Mine Phone Continuity SF2', // This is written to HMI
			LIVE_BOOL := 0, // This is written to from the IO variable
			EXPECTED_BOOL := 1,
			RESULT := 'FAIL' // This is written from HMI
		),
		(
			SECTION := 1,
			INDEX := 18,
			SCH_LBL := 'SF4',
			SIGNAL := 'Digital',
			TESTER_PORT := 'SF2',
			TARGET_PORT := 'S2',
			DESCRIPTION := 'Fire Pull Station Pulled', // This is written to HMI
			LIVE_BOOL := 0, // This is written to from the IO variable
			EXPECTED_BOOL := 1,
			RESULT := 'FAIL' // This is written from HMI
		),
		(
			SECTION := 1,
			INDEX := 19,
			SCH_LBL := 'SF6',
			SIGNAL := 'Digital',
			TESTER_PORT := 'SF2',
			TARGET_PORT := 'S2',
			DESCRIPTION := 'MGT Continuity SF6', // This is written to HMI
			LIVE_BOOL := 0, // This is written to from the IO variable
			EXPECTED_BOOL := 1,
			RESULT := 'FAIL' // This is written from HMI
		),
		(
			SECTION := 1,
			INDEX := 20,
			SCH_LBL := 'SF8',
			SIGNAL := 'Digital',
			TESTER_PORT := 'SF2',
			TARGET_PORT := 'S2',
			DESCRIPTION := 'MGT Continuity SF8', // This is written to HMI
			LIVE_BOOL := 0, // This is written to from the IO variable
			EXPECTED_BOOL := 1,
			RESULT := 'FAIL' // This is written from HMI
		),
		(
			SECTION := 1,
			INDEX := 21,
			SIGNAL := 'Digital',
			DESCRIPTION := 'JBOX Door Switch Open', // This is written to HMI
			LIVE_BOOL := 0, // This is written to from the IO variable
			EXPECTED_BOOL := 0,
			RESULT := 'FAIL' // This is written from HMI
		),
		(
			SECTION := 1,
			INDEX := 22,
			SIGNAL := 'Digital',
			DESCRIPTION := 'JBOX DCDCs_OK', // This is written to HMI
			LIVE_BOOL := 0, // This is written to from the IO variable
			EXPECTED_BOOL := 1,
			RESULT := 'FAIL' // This is written from HMI
		),
		(
			SECTION := 1,
			INDEX := 23,
			SIGNAL := 'Digital',
			DESCRIPTION := 'JBOX PSU2_OK', // This is written to HMI
			LIVE_BOOL := 0, // This is written to from the IO variable
			EXPECTED_BOOL := 1,
			RESULT := 'FAIL' // This is written from HMI
		)
		
	];
	
	IO_MAP_SECTION1_HMI : ARRAY[0..CONSTANTS.SECTION1_NUM_HMI_TESTS-1] OF IO_STRUCT := [
		(
			SECTION := 1,
			SIGNAL := 'HMI',
			TESTER_PORT := 'J2',
			DESCRIPTION := 'JBOX 480V Test', // This is written to HMI
			LIVE_BOOL := 0, // This is written to from the IO variable
			EXPECTED_BOOL := 1,
			RESULT := 'FAIL' // This is written from HMI
		),
		(
			SECTION := 1,
			DESCRIPTION := 'Performed PSU1 Configuration', // This is written to HMI
			LIVE_BOOL := 0, // This is written to from the IO variable
			EXPECTED_BOOL := 1,
			RESULT := 'FAIL' // This is written from HMI
		),
		(
			SECTION := 1,
			DESCRIPTION := 'Performed DCDC1 Configuration', // This is written to HMI
			LIVE_BOOL := 0, // This is written to from the IO variable
			EXPECTED_BOOL := 1,
			RESULT := 'FAIL' // This is written from HMI
		),
		(
			SECTION := 1,
			DESCRIPTION := 'Performed DCDC2 Configuration', // This is written to HMI
			LIVE_BOOL := 0, // This is written to from the IO variable
			EXPECTED_BOOL := 1,
			RESULT := 'FAIL' // This is written from HMI
		)
		
		(*
		(
			SECTION := 1,
			INDEX := 1,
			CARD := '',
			// TERMINAL := NULL,
			SCH_LBL := '',
			SIGNAL := 'HMI',
			TESTER_PORT := '',
			TARGET_PORT := '',
			DESCRIPTION := 'JBOX 120V Test', // This is written to HMI
			LIVE_BOOL := 0, // This is written to from the IO variable
			EXPECTED_BOOL := 1,
			RESULT := 'FAIL' // This is written from HMI
		)
		*)
	];
	

	// SECTION TWO OCCURS WITH DOOR OPEN, ESTOP PRESSED, AND PULL STATION PULLED
	// Need to get Estop Stuff In Here
	IO_MAP_SECTION2_DIG : ARRAY[0..CONSTANTS.SECTION2_NUM_DIG_TESTS-1] OF IO_STRUCT := [
		(
			SECTION := 2,
			INDEX := 0,
			CARD := 'C3',
			TERMINAL :=  1,
			SCH_LBL := 'SF4',
			SIGNAL := 'Digital',
			TESTER_PORT := 'SF2',
			TARGET_PORT := 'S2',
			DESCRIPTION := 'Fire Pull Station Reset Verification', // This is written to HMI
			LIVE_BOOL := 0, // This is written to from the IO variable
			EXPECTED_BOOL := 0,
			RESULT := 'FAIL' // This is written from HMI
		),
		(
			SECTION := 2,
			INDEX := 1,
			CARD := 'JBC0',
			TERMINAL :=  10,
			SCH_LBL := '',
			SIGNAL := 'Digital',
			TESTER_PORT := '',
			TARGET_PORT := '',
			DESCRIPTION := 'Door Switch Closed Verification', // This is written to HMI
			LIVE_BOOL := 0, // This is written to from the IO variable
			EXPECTED_BOOL := 1,
			RESULT := 'FAIL' // This is written from HMI
		),
		(
			SECTION := 1,
			INDEX := 2,
			SIGNAL := 'Digital',
			DESCRIPTION := 'JBOX PSU1_OK', // This is written to HMI
			LIVE_BOOL := 0, // This is written to from the IO variable
			EXPECTED_BOOL := 1,
			RESULT := 'FAIL' // This is written from HMI
		),
		(
			SECTION := 1,
			INDEX := 3,
			SCH_LBL := 'J7_4',
			SIGNAL := 'Digital',
			TESTER_PORT := 'J7',
			DESCRIPTION := '120V Supplied 7/8 S29 Up 24V Power Check', // This is written to HMI
			LIVE_BOOL := 0, // This is written to from the IO variable
			EXPECTED_BOOL := 1,
			RESULT := 'FAIL' // This is written from HMI
		),
		(
			SECTION := 1,
			INDEX := 4,
			SCH_LBL := 'J7_5',
			SIGNAL := 'Digital',
			TESTER_PORT := 'J7',
			DESCRIPTION := '120V Supplied 7/8 S29 Us 24V Power Check', // This is written to HMI
			LIVE_BOOL := 0, // This is written to from the IO variable
			EXPECTED_BOOL := 1,
			RESULT := 'FAIL' // This is written from HMI
		),
		(
			SECTION := 1,
			INDEX := 5,
			SCH_LBL := 'J8_4',
			SIGNAL := 'Digital',
			TESTER_PORT := 'J8',
			DESCRIPTION := '120V Supplied 7/8 S30 Up 24V Power Check', // This is written to HMI
			LIVE_BOOL := 0, // This is written to from the IO variable
			EXPECTED_BOOL := 1,
			RESULT := 'FAIL' // This is written from HMI
		),
		(
			SECTION := 1,
			INDEX := 6,
			SCH_LBL := 'J8_5',
			SIGNAL := 'Digital',
			TESTER_PORT := 'J8',
			DESCRIPTION := '120V Supplied 7/8 S30 Us 24V Power Check', // This is written to HMI
			LIVE_BOOL := 0, // This is written to from the IO variable
			EXPECTED_BOOL := 1,
			RESULT := 'FAIL' // This is written from HMI
		),
		(
			SECTION := 1,
			INDEX := 7,
			SCH_LBL := 'J1_1',
			SIGNAL := 'Digital',
			TESTER_PORT := 'J1',
			DESCRIPTION := '120V Supplied 24V Lighting Up S33', // This is written to HMI
			LIVE_BOOL := 0, // This is written to from the IO variable
			EXPECTED_BOOL := 1,
			RESULT := 'FAIL' // This is written from HMI
		),
		(
			SECTION := 1,
			INDEX := 8,
			SCH_LBL := 'J1_2',
			SIGNAL := 'Digital',
			TESTER_PORT := 'J1',
			DESCRIPTION := '120V Supplied 24V Lighting Up S33', // This is written to HMI
			LIVE_BOOL := 0, // This is written to from the IO variable
			EXPECTED_BOOL := 1,
			RESULT := 'FAIL' // This is written from HMI
		),
		(
			SECTION := 1,
			INDEX := 9,
			SCH_LBL := 'J2_1',
			SIGNAL := 'Digital',
			TESTER_PORT := 'J2',
			DESCRIPTION := '120V Supplied 24V Lighting Up S34', // This is written to HMI
			LIVE_BOOL := 0, // This is written to from the IO variable
			EXPECTED_BOOL := 1,
			RESULT := 'FAIL' // This is written from HMI
		),
		(
			SECTION := 1,
			INDEX := 10,
			SCH_LBL := 'J2_2',
			SIGNAL := 'Digital',
			TESTER_PORT := 'J2',
			DESCRIPTION := '120V Supplied 24V Lighting Us S34', // This is written to HMI
			LIVE_BOOL := 0, // This is written to from the IO variable
			EXPECTED_BOOL := 1,
			RESULT := 'FAIL' // This is written from HMI
		),
		(
			SECTION := 1,
			INDEX := 11,
			SCH_LBL := 'J3_1',
			SIGNAL := 'Digital',
			TESTER_PORT := 'J3',
			DESCRIPTION := '120V Supplied 24V Lighting Up S25', // This is written to HMI
			LIVE_BOOL := 0, // This is written to from the IO variable
			EXPECTED_BOOL := 1,
			RESULT := 'FAIL' // This is written from HMI
		),
		(
			SECTION := 1,
			INDEX := 12,
			SCH_LBL := 'J3_2',
			SIGNAL := 'Digital',
			TESTER_PORT := 'J3',
			DESCRIPTION := '120V Supplied 24V Lighting Us S25', // This is written to HMI
			LIVE_BOOL := 0, // This is written to from the IO variable
			EXPECTED_BOOL := 1,
			RESULT := 'FAIL' // This is written from HMI
		),
		(
			SECTION := 1,
			INDEX := 13,
			SCH_LBL := 'J4_1',
			SIGNAL := 'Digital',
			TESTER_PORT := 'J4',
			DESCRIPTION := '120V Supplied 24V Lighting Up S26', // This is written to HMI
			LIVE_BOOL := 0, // This is written to from the IO variable
			EXPECTED_BOOL := 1,
			RESULT := 'FAIL' // This is written from HMI
		),
		(
			SECTION := 1,
			INDEX := 14,
			SCH_LBL := 'J4_2',
			SIGNAL := 'Digital',
			TESTER_PORT := 'J4',
			DESCRIPTION := '120V Supplied 24V Lighting Us S26', // This is written to HMI
			LIVE_BOOL := 0, // This is written to from the IO variable
			EXPECTED_BOOL := 1,
			RESULT := 'FAIL' // This is written from HMI
		),
		(
			SECTION := 1,
			INDEX := 15,
			SCH_LBL := 'J5_1',
			SIGNAL := 'Digital',
			TESTER_PORT := 'J5',
			DESCRIPTION := '120V Supplied 24V Lighting Up S27', // This is written to HMI
			LIVE_BOOL := 0, // This is written to from the IO variable
			EXPECTED_BOOL := 1,
			RESULT := 'FAIL' // This is written from HMI
		),
		(
			SECTION := 1,
			INDEX := 16,
			SCH_LBL := 'J5_2',
			SIGNAL := 'Digital',
			TESTER_PORT := 'J5',
			DESCRIPTION := '120V Supplied 24V Lighting Us S27', // This is written to HMI
			LIVE_BOOL := 0, // This is written to from the IO variable
			EXPECTED_BOOL := 1,
			RESULT := 'FAIL' // This is written from HMI
		),
		(
			SECTION := 1,
			INDEX := 17,
			SCH_LBL := 'J6_1',
			SIGNAL := 'Digital',
			TESTER_PORT := 'J6',
			DESCRIPTION := '120V Supplied 24V Lighting Up S28', // This is written to HMI
			LIVE_BOOL := 0, // This is written to from the IO variable
			EXPECTED_BOOL := 1,
			RESULT := 'FAIL' // This is written from HMI
		),
		(
			SECTION := 1,
			INDEX := 18,
			SCH_LBL := 'J6_2',
			SIGNAL := 'Digital',
			TESTER_PORT := 'J6',
			DESCRIPTION := '120V Supplied 24V Lighting Us S28', // This is written to HMI
			LIVE_BOOL := 0, // This is written to from the IO variable
			EXPECTED_BOOL := 1,
			RESULT := 'FAIL' // This is written from HMI
		)
		];
		
	

	IO_MAP_SECTION2_HMI : ARRAY[0..CONSTANTS.SECTION2_NUM_HMI_TESTS-1] OF IO_STRUCT := [
		(
			SECTION := 1,
			INDEX := 0,
			SIGNAL := 'HMI',
			DESCRIPTION := 'Performed PSU2 Configuration', // This is written to HMI
			LIVE_BOOL := 0, // This is written to from the IO variable
			EXPECTED_BOOL := 1,
			RESULT := 'FAIL' // This is written from HMI
		),
		(
			SECTION := 1,
			INDEX := 1,
			SIGNAL := 'HMI',
			DESCRIPTION := '120V Grace Port Lit Up', // This is written to HMI
			LIVE_BOOL := 0, // This is written to from the IO variable
			EXPECTED_BOOL := 1,
			RESULT := 'FAIL' // This is written from HMI
		),
		(
			SECTION := 1,
			INDEX := 2,
			SIGNAL := 'HMI',
			DESCRIPTION := '120V Grace outlet verification grace lit up', // This is written to HMI
			LIVE_BOOL := 0, // This is written to from the IO variable
			EXPECTED_BOOL := 1,
			RESULT := 'FAIL' // This is written from HMI
		)
		];

END_VAR
		
]]></Declaration>
  </GVL>
</TcPlcObject>