<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.10">
  <POU Name="WRITE_IO_VALUES" Id="{55b88960-6b20-4ae3-aa50-c0ed2fa4ad03}" SpecialFunc="None">
    <Declaration><![CDATA[FUNCTION WRITE_IO_VALUES : BOOL
VAR_INPUT
END_VAR
VAR
	i : INT;
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[
// Write Values to IO Structures


// WRITE VALUES TO SECTION 1 Digital Input VARIABLES
FOR i := 0 TO CONSTANTS.SECTION1_NUM_DIG_TESTS - 1 DO
	GVL_IO_STRUCTS.IO_MAP_SECTION1_DIG[i].LIVE_BOOL := GVL_IO.SECTION1_DIG_INPUTS[i]^;
END_FOR

// WRITE VALUES TO Section 1 HMI INPUT TESTS

GVL_IO_STRUCTS.IO_MAP_SECTION1_HMI[0].LIVE_BOOL := GVL_HMI.HMI_SECTION_1_INSTRUCTIONS[0].Status;
GVL_IO_STRUCTS.IO_MAP_SECTION1_HMI[1].LIVE_BOOL := GVL_HMI.HMI_SECTION_1_INSTRUCTIONS[1].Status;
GVL_IO_STRUCTS.IO_MAP_SECTION1_HMI[2].LIVE_BOOL := GVL_HMI.HMI_SECTION_1_INSTRUCTIONS[2].Status;
GVL_IO_STRUCTS.IO_MAP_SECTION1_HMI[3].LIVE_BOOL := GVL_HMI.HMI_SECTION_1_INSTRUCTIONS[3].Status;


// WRITE VALUES TO SECTION 2 Digital Input Variables
FOR i := 0 TO CONSTANTS.SECTION2_NUM_DIG_TESTS - 1 DO
	GVL_IO_STRUCTS.IO_MAP_SECTION2_DIG[i].LIVE_BOOL := GVL_IO.SECTION2_DIG_INPUTS[i]^;
END_FOR


GVL_IO_STRUCTS.IO_MAP_SECTION2_HMI[0].LIVE_BOOL := GVL_HMI.HMI_SECTION_2_INSTRUCTIONS[4].Status;
GVL_IO_STRUCTS.IO_MAP_SECTION2_HMI[1].LIVE_BOOL := GVL_HMI.HMI_SECTION_2_INSTRUCTIONS[5].Status;
GVL_IO_STRUCTS.IO_MAP_SECTION2_HMI[2].LIVE_BOOL := GVL_HMI.HMI_SECTION_2_INSTRUCTIONS[6].Status;




// Write Values to other test variables


(*
GVL_IO_STRUCTS.FIRE_ALRM_P5.LIVE_BOOL := GVL_IO.C2_P2;
GVL_IO_STRUCTS.JB_CARD_Us.LIVE_BOOL := GVL_IO.JB_1914_Us;
GVL_IO_STRUCTS.JB_CARD_Up.LIVE_BOOL := GVL_IO.JB_1914_Up;
GVL_IO_STRUCTS.FIRE_PULL_P4.LIVE_BOOL := GVL_IO.C3_P1;
GVL_IO_STRUCTS.Us_24V_5.LIVE_BOOL := GVL_IO.C3_P2;
GVL_IO_STRUCTS.Up_24V_5.LIVE_BOOL := GVL_IO.C3_P3;
GVL_IO_STRUCTS.Us_24V_1.LIVE_BOOL := GVL_IO.C3_P4;
GVL_IO_STRUCTS.Up_24V_1.LIVE_BOOL := GVL_IO.C3_P5;
GVL_IO_STRUCTS.Us_24V_2.LIVE_BOOL := GVL_IO.C3_P6;
GVL_IO_STRUCTS.Up_24V_2.LIVE_BOOL := GVL_IO.C3_P7;
GVL_IO_STRUCTS.Us_24V_3.LIVE_BOOL := GVL_IO.C4_P1;
GVL_IO_STRUCTS.Up_24V_3.LIVE_BOOL := GVL_IO.C4_P2;
GVL_IO_STRUCTS.Us_24V_4.LIVE_BOOL := GVL_IO.C4_P3;
GVL_IO_STRUCTS.Up_24V_4.LIVE_BOOL := GVL_IO.C4_P4;
GVL_IO_STRUCTS.Us_24V_6.LIVE_BOOL := GVL_IO.C4_P5;
GVL_IO_STRUCTS.Up_24V_6.LIVE_BOOL := GVL_IO.C4_P6;
GVL_IO_STRUCTS.PHONE_P2.LIVE_BOOL := GVL_IO.C4_P7;
GVL_IO_STRUCTS.PHONE_P1.LIVE_BOOL := GVL_IO.C4_P8;
GVL_IO_STRUCTS.MGT_P6.LIVE_BOOL := GVL_IO.C5_P1;
GVL_IO_STRUCTS.MGT_P8.LIVE_BOOL := GVL_IO.C5_P2;
GVL_IO_STRUCTS.LIGHT_24V_Us_1.LIVE_BOOL := GVL_IO.C5_P3;
GVL_IO_STRUCTS.LIGHT_24V_Up_1.LIVE_BOOL := GVL_IO.C5_P4;
GVL_IO_STRUCTS.LIGHT_24V_Us_2.LIVE_BOOL := GVL_IO.C5_P5;
GVL_IO_STRUCTS.LIGHT_24V_Up_2.LIVE_BOOL := GVL_IO.C5_P6;
*)]]></ST>
    </Implementation>
  </POU>
</TcPlcObject>